CMAKE_MINIMUM_REQUIRED(VERSION 3.8)
PROJECT(net)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

FIND_PACKAGE(Boost COMPONENTS system REQUIRED)
FIND_PACKAGE(Threads REQUIRED)

ADD_EXECUTABLE(${PROJECT_NAME} "main.cpp")
TARGET_LINK_LIBRARIES(${PROJECT_NAME} Boost::system Threads::Threads)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
